--- a/AssemblyInstructions/Assembly_Default.html
+++ b/AssemblyInstructions/Assembly_Default.html
@@ -80,7 +80,7 @@
   </div>
   <br>
   <br>
-  <H1> Download Area for WebBikez Assembly Instructions</H1>
+  <H1 class="text-center"> Download Area for WebBikez Assembly Instructions</H1>
   <br>
   <br>
   <div class="jumbotron text-center">
