--- a/StoreFront/StoreFront_Default.html
+++ b/StoreFront/StoreFront_Default.html
@@ -80,7 +80,7 @@
   </div>
   <br>
   <br>
-  <H1> WebBikez Store Front</H1>
+  <H1 class="text-center"> WebBikez Store Front</H1>
   <br>
   <br>
   <div class="jumbotron text-center">
